--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                   Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
                   Наши лоты вообще не должны были попасть ни на один аукцион. 
                   Потому что кому нужен дневник девочки-подростка или картина, 
-                  которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+                  которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, 
+                  созданные любителями?
                 </p>
                 <p  class="about__text__second">
                   Слишком сложные или, наоборот, слишком простые. Опережающие своё время. 
