--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
   </head>
@@ -28,12 +27,12 @@
     <a class="header__logo">
       <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта">
     </a>  
-    <nav class="header__contacts">
-      <a href="tel:+70000000">+9 999 555 5555</a>
+    <address class="header__contacts">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
       <br>
-      <a href="mailto:mail@example.com">info@sobaka.ge</a>
-      <address class="address">наб. Принсенграхт 263- 265, Амстердам</address>
-    </nav>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p class="address">наб. Принсенграхт 263- 265, Амстердам</p>
+    </address>
     </header>
     <main>
       <section class='cover'>
@@ -44,7 +43,7 @@
         </h1>
         <div class="overlay"></div>
         <div class="cover__description">
-          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
@@ -116,7 +115,7 @@
                   которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, 
                   созданные любителями?
                 </p>
-                <p  class="about__text__second">
+                <p  class="about__text">
                   Слишком сложные или, наоборот, слишком простые. Опережающие своё время. 
                   В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они 
                   казались просто неудачными. Но, несмотря
@@ -130,12 +129,12 @@
       </section>
     </main>
     <footer class="footer">
-      <nav class="footer__contacts">
-        <a href="tel:+70000000">+9 999 555 5555</a>
+      <address class="footer__contacts">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
         <br>
-        <a href="mailto:mail@example.com">info@sobaka.ge</a>
-        <address class="address">наб. Принсенграхт 263- 265, Амстердам</address>
-      </nav>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
@@ -149,17 +148,19 @@
           </li>
         </ul>
       </nav>
-      <ul class="footer__social-list">
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/yt.svg" alt="Логотип YouTube"></a>
-        </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/vk.svg" alt="Логотип VK"></a>
-        </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/pinterest.svg" alt="Логотип Pinterest"></a>
-        </li>
-      </ul>
+      <nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/yt.svg" alt="Логотип YouTube"></a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/vk.svg" alt="Логотип VK"></a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0"><img class="footer__social-icon" src="./images/pinterest.svg" alt="Логотип Pinterest"></a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
