--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     Объёмом почти в тысячу страниц. Иногда без знаков препинания и 
                     с переходами на древнеанглийский. В ней одновременно рассказывается 
                     о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
-                    И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                    И это всё накладывается на эпическую поэму Гомера. Сколько бы вы 
+                    поставили на «Улисса» Джеймса Джойса?
                   </p>
                 </article>
               </a>
